input-sys/include/libinput.1.9.0.h


struct libinput;
struct libinput_event;
struct libinput_event_pointer;
struct libinput_event_touch;
enum libinput_pointer_axis {
	LIBINPUT_POINTER_AXIS_SCROLL_VERTICAL = 0,
	LIBINPUT_POINTER_AXIS_SCROLL_HORIZONTAL = 1,
};
enum libinput_pointer_axis_source {
	LIBINPUT_POINTER_AXIS_SOURCE_WHEEL = 1,
	LIBINPUT_POINTER_AXIS_SOURCE_FINGER,
	LIBINPUT_POINTER_AXIS_SOURCE_CONTINUOUS,
	LIBINPUT_POINTER_AXIS_SOURCE_WHEEL_TILT,
};
enum libinput_event_type {
	LIBINPUT_EVENT_NONE = 0,
	LIBINPUT_EVENT_DEVICE_ADDED,
	LIBINPUT_EVENT_DEVICE_REMOVED,
	LIBINPUT_EVENT_KEYBOARD_KEY = 300,
	LIBINPUT_EVENT_POINTER_MOTION = 400,
	LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE,
	LIBINPUT_EVENT_POINTER_BUTTON,
	LIBINPUT_EVENT_POINTER_AXIS,
	LIBINPUT_EVENT_TOUCH_DOWN = 500,
	LIBINPUT_EVENT_TOUCH_UP,
	LIBINPUT_EVENT_TOUCH_MOTION,
	LIBINPUT_EVENT_TOUCH_CANCEL,
	LIBINPUT_EVENT_TOUCH_FRAME,
	LIBINPUT_EVENT_TABLET_TOOL_AXIS = 600,
	LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY,
	LIBINPUT_EVENT_TABLET_TOOL_TIP,
	LIBINPUT_EVENT_TABLET_TOOL_BUTTON,
	LIBINPUT_EVENT_TABLET_PAD_BUTTON = 700,
	LIBINPUT_EVENT_TABLET_PAD_RING,
	LIBINPUT_EVENT_TABLET_PAD_STRIP,
	LIBINPUT_EVENT_GESTURE_SWIPE_BEGIN = 800,
	LIBINPUT_EVENT_GESTURE_SWIPE_UPDATE,
	LIBINPUT_EVENT_GESTURE_SWIPE_END,
	LIBINPUT_EVENT_GESTURE_PINCH_BEGIN,
	LIBINPUT_EVENT_GESTURE_PINCH_UPDATE,
	LIBINPUT_EVENT_GESTURE_PINCH_END,
	LIBINPUT_EVENT_SWITCH_TOGGLE = 900,
};
double
libinput_event_pointer_get_axis_value(struct libinput_event_pointer *event,
				      enum libinput_pointer_axis axis);
double
libinput_event_pointer_get_axis_value_discrete(struct libinput_event_pointer *event,
					       enum libinput_pointer_axis axis);
struct libinput_event *
libinput_event_pointer_get_base_event(struct libinput_event_pointer *event);
uint32_t
libinput_event_touch_get_time(struct libinput_event_touch *event);
uint64_t
libinput_event_touch_get_time_usec(struct libinput_event_touch *event);
int32_t
libinput_event_touch_get_slot(struct libinput_event_touch *event);
int32_t
libinput_event_touch_get_seat_slot(struct libinput_event_touch *event);
double
libinput_event_touch_get_x(struct libinput_event_touch *event);
double
libinput_event_touch_get_y(struct libinput_event_touch *event);
double
libinput_event_touch_get_x_transformed(struct libinput_event_touch *event,
				       uint32_t width);
double
libinput_event_touch_get_y_transformed(struct libinput_event_touch *event,
				       uint32_t height);
struct libinput_event *
libinput_event_touch_get_base_event(struct libinput_event_touch *event);
uint32_t
libinput_event_gesture_get_time(struct libinput_event_gesture *event);
uint64_t
libinput_event_gesture_get_time_usec(struct libinput_event_gesture *event);
struct libinput_event *
libinput_event_gesture_get_base_event(struct libinput_event_gesture *event);
int
libinput_event_gesture_get_finger_count(struct libinput_event_gesture *event);
int
libinput_event_gesture_get_cancelled(struct libinput_event_gesture *event);
double
libinput_event_gesture_get_dx(struct libinput_event_gesture *event);
double
libinput_event_gesture_get_dy(struct libinput_event_gesture *event);