input-sys/src/platforms/freebsd/x86/gen_1_9.rs

extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " Return the axis value in discrete steps for a given axis event. How a"]
    #[doc = " value translates into a discrete step depends on the source."]
    #[doc = ""]
    #[doc = " If the source is @ref LIBINPUT_POINTER_AXIS_SOURCE_WHEEL, the discrete"]
    #[doc = " value correspond to the number of physical mouse wheel clicks."]
    #[doc = ""]
    #[doc = " If the source is @ref LIBINPUT_POINTER_AXIS_SOURCE_CONTINUOUS or @ref"]
    #[doc = " LIBINPUT_POINTER_AXIS_SOURCE_FINGER, the discrete value is always 0."]
    #[doc = ""]
    #[doc = " @return The discrete value for the given event."]
    #[doc = ""]
    #[doc = " @see libinput_event_pointer_get_axis_value"]
    pub fn libinput_event_pointer_get_axis_value_discrete(
        event: *mut libinput_event_pointer,
        axis: libinput_pointer_axis,
    ) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " @return The generic libinput_event of this event"]
    pub fn libinput_event_pointer_get_base_event(
        event: *mut libinput_event_pointer,
    ) -> *mut libinput_event;
}
extern "C" {
    #[doc = " @ingroup event_touch"]
    #[doc = ""]
    #[doc = " @note Timestamps may not always increase. See @ref event_timestamps for"]
    #[doc = " details."]
    #[doc = ""]
    #[doc = " @return The event time for this event"]
    pub fn libinput_event_touch_get_time(event: *mut libinput_event_touch) -> u32;
}
extern "C" {
    #[doc = " @ingroup event_touch"]
    #[doc = ""]
    #[doc = " @note Timestamps may not always increase. See @ref event_timestamps for"]
    #[doc = " details."]
    #[doc = ""]
    #[doc = " @return The event time for this event in microseconds"]
    pub fn libinput_event_touch_get_time_usec(event: *mut libinput_event_touch) -> u64;
}
extern "C" {
    #[doc = " @ingroup event_touch"]
    #[doc = ""]
    #[doc = " Get the slot of this touch event. See the kernel's multitouch"]
    #[doc = " protocol B documentation for more information."]
    #[doc = ""]
    #[doc = " If the touch event has no assigned slot, for example if it is from a"]
    #[doc = " single touch device, this function returns -1."]
    #[doc = ""]
    #[doc = " For events not of type @ref LIBINPUT_EVENT_TOUCH_DOWN, @ref"]
    #[doc = " LIBINPUT_EVENT_TOUCH_UP, @ref LIBINPUT_EVENT_TOUCH_MOTION or @ref"]
    #[doc = " LIBINPUT_EVENT_TOUCH_CANCEL, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events of type"]
    #[doc = " other than @ref LIBINPUT_EVENT_TOUCH_DOWN, @ref LIBINPUT_EVENT_TOUCH_UP,"]
    #[doc = " @ref LIBINPUT_EVENT_TOUCH_MOTION or @ref LIBINPUT_EVENT_TOUCH_CANCEL."]
    #[doc = ""]
    #[doc = " @return The slot of this touch event"]
    pub fn libinput_event_touch_get_slot(event: *mut libinput_event_touch) -> i32;
}
extern "C" {
    #[doc = " @ingroup event_touch"]
    #[doc = ""]
    #[doc = " Get the seat slot of the touch event. A seat slot is a non-negative seat"]
    #[doc = " wide unique identifier of an active touch point."]
    #[doc = ""]
    #[doc = " Events from single touch devices will be represented as one individual"]
    #[doc = " touch point per device."]
    #[doc = ""]
    #[doc = " For events not of type @ref LIBINPUT_EVENT_TOUCH_DOWN, @ref"]
    #[doc = " LIBINPUT_EVENT_TOUCH_UP, @ref LIBINPUT_EVENT_TOUCH_MOTION or @ref"]
    #[doc = " LIBINPUT_EVENT_TOUCH_CANCEL, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events of type"]
    #[doc = " other than @ref LIBINPUT_EVENT_TOUCH_DOWN, @ref LIBINPUT_EVENT_TOUCH_UP,"]
    #[doc = " @ref LIBINPUT_EVENT_TOUCH_MOTION or @ref LIBINPUT_EVENT_TOUCH_CANCEL."]
    #[doc = ""]
    #[doc = " @return The seat slot of the touch event"]
    pub fn libinput_event_touch_get_seat_slot(event: *mut libinput_event_touch) -> i32;
}
extern "C" {
    #[doc = " @ingroup event_touch"]
    #[doc = ""]
    #[doc = " Return the current absolute x coordinate of the touch event, in mm from"]
    #[doc = " the top left corner of the device. To get the corresponding output screen"]
    #[doc = " coordinate, use libinput_event_touch_get_x_transformed()."]
    #[doc = ""]
    #[doc = " For events not of type @ref LIBINPUT_EVENT_TOUCH_DOWN, @ref"]
    #[doc = " LIBINPUT_EVENT_TOUCH_MOTION, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events of type"]
    #[doc = " other than @ref LIBINPUT_EVENT_TOUCH_DOWN or @ref"]
    #[doc = " LIBINPUT_EVENT_TOUCH_MOTION."]
    #[doc = ""]
    #[doc = " @param event The libinput touch event"]
    #[doc = " @return The current absolute x coordinate"]
    pub fn libinput_event_touch_get_x(event: *mut libinput_event_touch) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_touch"]
    #[doc = ""]
    #[doc = " Return the current absolute y coordinate of the touch event, in mm from"]
    #[doc = " the top left corner of the device. To get the corresponding output screen"]
    #[doc = " coordinate, use libinput_event_touch_get_y_transformed()."]
    #[doc = ""]
    #[doc = " For events not of type @ref LIBINPUT_EVENT_TOUCH_DOWN, @ref"]
    #[doc = " LIBINPUT_EVENT_TOUCH_MOTION, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events of type"]
    #[doc = " other than @ref LIBINPUT_EVENT_TOUCH_DOWN or @ref"]
    #[doc = " LIBINPUT_EVENT_TOUCH_MOTION."]
    #[doc = ""]
    #[doc = " @param event The libinput touch event"]
    #[doc = " @return The current absolute y coordinate"]
    pub fn libinput_event_touch_get_y(event: *mut libinput_event_touch) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_touch"]
    #[doc = ""]
    #[doc = " Return the current absolute x coordinate of the touch event, transformed to"]
    #[doc = " screen coordinates."]
    #[doc = ""]
    #[doc = " For events not of type @ref LIBINPUT_EVENT_TOUCH_DOWN, @ref"]
    #[doc = " LIBINPUT_EVENT_TOUCH_MOTION, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events of type"]
    #[doc = " other than @ref LIBINPUT_EVENT_TOUCH_DOWN or @ref"]
    #[doc = " LIBINPUT_EVENT_TOUCH_MOTION."]
    #[doc = ""]
    #[doc = " @param event The libinput touch event"]
    #[doc = " @param width The current output screen width"]
    #[doc = " @return The current absolute x coordinate transformed to a screen coordinate"]
    pub fn libinput_event_touch_get_x_transformed(
        event: *mut libinput_event_touch,
        width: u32,
    ) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_touch"]
    #[doc = ""]
    #[doc = " Return the current absolute y coordinate of the touch event, transformed to"]
    #[doc = " screen coordinates."]
    #[doc = ""]
    #[doc = " For events not of type @ref LIBINPUT_EVENT_TOUCH_DOWN, @ref"]
    #[doc = " LIBINPUT_EVENT_TOUCH_MOTION, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events of type"]
    #[doc = " other than @ref LIBINPUT_EVENT_TOUCH_DOWN or @ref"]
    #[doc = " LIBINPUT_EVENT_TOUCH_MOTION."]
    #[doc = ""]
    #[doc = " @param event The libinput touch event"]
    #[doc = " @param height The current output screen height"]
    #[doc = " @return The current absolute y coordinate transformed to a screen coordinate"]
    pub fn libinput_event_touch_get_y_transformed(
        event: *mut libinput_event_touch,
        height: u32,
    ) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_touch"]
    #[doc = ""]
    #[doc = " @return The generic libinput_event of this event"]
    pub fn libinput_event_touch_get_base_event(
        event: *mut libinput_event_touch,
    ) -> *mut libinput_event;
}
extern "C" {
    #[doc = " @ingroup event_gesture"]
    #[doc = ""]
    #[doc = " @note Timestamps may not always increase. See @ref event_timestamps for"]
    #[doc = " details."]
    #[doc = ""]
    #[doc = " @return The event time for this event"]
    pub fn libinput_event_gesture_get_time(event: *mut libinput_event_gesture) -> u32;
}
extern "C" {
    #[doc = " @ingroup event_gesture"]
    #[doc = ""]
    #[doc = " @note Timestamps may not always increase. See @ref event_timestamps for"]
    #[doc = " details."]
    #[doc = ""]
    #[doc = " @return The event time for this event in microseconds"]
    pub fn libinput_event_gesture_get_time_usec(event: *mut libinput_event_gesture) -> u64;
}
extern "C" {
    #[doc = " @ingroup event_gesture"]
    #[doc = ""]
    #[doc = " @return The generic libinput_event of this event"]
    pub fn libinput_event_gesture_get_base_event(
        event: *mut libinput_event_gesture,
    ) -> *mut libinput_event;
}
extern "C" {
    #[doc = " @ingroup event_gesture"]
    #[doc = ""]
    #[doc = " Return the number of fingers used for a gesture. This can be used e.g."]
    #[doc = " to differentiate between 3 or 4 finger swipes."]
    #[doc = ""]
    #[doc = " This function can be called on all gesture events and the returned finger"]
    #[doc = " count value will not change during a sequence."]
    #[doc = ""]
    #[doc = " @return the number of fingers used for a gesture"]
    pub fn libinput_event_gesture_get_finger_count(
        event: *mut libinput_event_gesture,
    ) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_gesture"]
    #[doc = ""]
    #[doc = " Return if the gesture ended normally, or if it was cancelled."]
    #[doc = " For gesture events that are not of type"]
    #[doc = " @ref LIBINPUT_EVENT_GESTURE_SWIPE_END or"]
    #[doc = " @ref LIBINPUT_EVENT_GESTURE_PINCH_END, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_GESTURE_SWIPE_END or"]
    #[doc = " @ref LIBINPUT_EVENT_GESTURE_PINCH_END."]
    #[doc = ""]
    #[doc = " @return 0 or 1, with 1 indicating that the gesture was cancelled."]
    pub fn libinput_event_gesture_get_cancelled(
        event: *mut libinput_event_gesture,
    ) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_gesture"]
    #[doc = ""]
    #[doc = " Return the delta between the last event and the current event. For gesture"]
    #[doc = " events that are not of type @ref LIBINPUT_EVENT_GESTURE_SWIPE_UPDATE or"]
    #[doc = " @ref LIBINPUT_EVENT_GESTURE_PINCH_UPDATE, this function returns 0."]
    #[doc = ""]
    #[doc = " If a device employs pointer acceleration, the delta returned by this"]
    #[doc = " function is the accelerated delta."]
    #[doc = ""]
    #[doc = " Relative motion deltas are normalized to represent those of a device with"]
    #[doc = " 1000dpi resolution. See @ref motion_normalization for more details."]
    #[doc = ""]
    #[doc = " @return the relative x movement since the last event"]
    pub fn libinput_event_gesture_get_dx(event: *mut libinput_event_gesture) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_gesture"]
    #[doc = ""]
    #[doc = " Return the delta between the last event and the current event. For gesture"]
    #[doc = " events that are not of type @ref LIBINPUT_EVENT_GESTURE_SWIPE_UPDATE or"]
    #[doc = " @ref LIBINPUT_EVENT_GESTURE_PINCH_UPDATE, this function returns 0."]
    #[doc = ""]
    #[doc = " If a device employs pointer acceleration, the delta returned by this"]
    #[doc = " function is the accelerated delta."]
    #[doc = ""]
    #[doc = " Relative motion deltas are normalized to represent those of a device with"]
    #[doc = " 1000dpi resolution. See @ref motion_normalization for more details."]
    #[doc = ""]
    #[doc = " @return the relative y movement since the last event"]
    pub fn libinput_event_gesture_get_dy(event: *mut libinput_event_gesture) -> f64;
}
